--- a/#src/scss/adaptive/_desktop.scss
+++ b/#src/scss/adaptive/_desktop.scss
@@ -1,10 +1,11 @@
 .container {
-  max-width: 1222px;
+  max-width: 1240px;
 }
 
 .body__wrapper {
   z-index: 9;
   padding: 0;
+  height: 100%;
   background-color: var(--color-white);
 }
 
@@ -42,12 +43,14 @@
         &::after {
           content: "";
           position: absolute;
-          left: 0;
+          left: 50%;
+          right: 50%;
           bottom: 0;
-          width: 100%;
+          width: 114%;
           height: 2px;
           background-color: var(--color-orange);
           opacity: 0;
+          transform: translate(-50%, 0);
           transition: opacity 0.3s;
         }
       }
@@ -71,7 +74,7 @@
       justify-content: center;
       margin-top: 11px;
       margin-right: 11px;
-      width: 868px;
+      width: 885px;
       background-color: transparent;
     }
 
@@ -163,26 +166,26 @@
     }
   }
 
-  .icon__logo {
-    margin-top: 9px;
-    margin-left: 38px;
+  &__logo {
+    margin: 0;
+    padding: 10px 0 0 38px;
   }
 }
 
 .main {
   overflow: hidden;
   margin-top: 36px;
-  min-height: 448px;
+  min-height: 447px;
   background: url("../../img/hero/hero-girls.png") no-repeat, url("../../img/hero/hero-bg2.png") no-repeat,
     url("../../img/hero/hero-bg.jpg") no-repeat;
-  background-position-x: 79%, 15%, 90%;
-  background-position-y: 100%, 35%, 81%;
-  background-size: 36%, contain, 56%;
+  background-position-x: 78%, 15%, 88%;
+  background-position-y: 145%, 35%, 81%;
+  background-size: 36%, contain, 55%;
 
   &__container {
-    padding: 95px 0;
+    padding: 95px 1px;
     height: 100%;
-    max-width: 1150px;
+    max-width: 1170px;
   }
 
   &__title {
@@ -200,16 +203,24 @@
 .plus {
   &__wrapper {
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: normal;
+    margin-left: 32px;
+  }
+
+  &__desc {
+    top: 0;
   }
 
   &__slide {
     position: relative;
     align-items: center;
+    justify-content: flex-start;
+    overflow: hidden;
     border: 1px solid #ededed;
+    padding-bottom: 60px;
     width: 100%;
-    height: 377px;
-    max-width: 399px;
+    max-width: 395px;
+    max-height: 310px;
     transition: box-shadow 0.3s;
 
     &:hover {
@@ -221,12 +232,30 @@
       }
 
       .plus__desc {
+        top: 205px;
         opacity: 1;
       }
     }
 
+    &:first-child {
+      .plus__icon {
+        width: 67%;
+      }
+    }
+
+    &:nth-child(2) {
+      .plus__icon {
+        width: 75%;
+      }
+    }
+
+    &:nth-child(n+3) {
+      margin-top: 1px;
+    }
+
     &:nth-child(4) {
       .plus__icon {
+        width: 95%;
         fill: transparent;
         stroke: #4f4f4f;
         stroke-width: 3;
@@ -253,11 +282,18 @@
   }
 
   &__img {
+    margin-top: 60px;
+    max-width: 100px;
+    max-height: 100px;
     text-align: center;
   }
 
   &__icon {
-    width: 80%;
+    height: 100%;
+  }
+
+  &__title {
+    margin-top: 20px;
   }
 }
 
