--- a/#src/scss/adaptive/_mobile.scss
+++ b/#src/scss/adaptive/_mobile.scss
@@ -228,10 +228,18 @@
   padding: 20px 0;
   width: 100%;
 
-  &__section {
-    position: relative;
+  &__yt {
     width: 100%;
-    height: 207px;
+    height: 530px;
+    max-width: 920px;
+  }
+
+  &__poster {
+    width: 100%;
+    height: 208px;
+    background: url("../../img/cover.png") no-repeat;
+    background-position: 49% 80%;
+    background-size: 201%;
   }
 
   &__play {
@@ -267,12 +275,26 @@
       transform: translate(-50%, -55%);
     }
   }
+
+  &__popup {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__popup.video-open {
+    left: 0;
+    top: 0;
+    z-index: 20;
+    height: 100%;
+    opacity: 1;
+  }
 }
 
 .title {
   margin: 5px 0;
   font-weight: 400;
-  font-size: 21px;
+  font-size: 22px;
   line-height: 1.25em;
   text-align: center;
 }
@@ -295,6 +317,10 @@
 .values {
   margin-top: 15px;
   background-color: var(--color-grey);
+
+  .title {
+    margin: 22px 0 5px;
+  }
 
   &__wrapper {
     padding: 10px 10px 60px;
@@ -479,18 +505,25 @@
 }
 
 .popup {
-  position: absolute;
+  position: fixed;
   left: -9999px;
   top: -10px;
   z-index: 40;
-  display: block;
   overflow-y: scroll;
-  background-color: var(--color-white);
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
   opacity: 0;
   transition: top 0.3s, opacity 0.5s;
 
+  &__wrapper {
+    display: flex;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
   &__container {
     padding: 20px;
+    background-color: var(--color-white);
   }
 
   &__close {
